EQ2-131 test refactoring